# real-time-analytics-book-scratch

./: .gitignore
chapter03/: docker-compose.yml
chapter03/orders-service/: multiseeder.py  pyproject.toml
chapter04/: docker-compose.yml
chapter04/pizzashop/: Dockerfile  pom.xml
chapter04/pizzashop/src/main/java/pizzashop/models/: OrdersSummary.java
chapter05/: docker-compose.yml
chapter05/orders-service/: multiseeder.py
chapter06/: docker-compose.yml
chapter06/orders-service/: multiseeder.py
chapter06/pizzashop/: README.md  pom.xml
chapter06/pizzashop/src/main/docker/: Dockerfile.jvm
chapter06/streamlit/: app.py  config.toml
chapter07/: docker-compose-1-pinot.yml  docker-compose-2-kafka-streams-rest-api.yml  docker-compose-up.sh
chapter07/mysql/: mysql_bootstrap.sql
chapter07/orders-service/: Dockerfile
chapter07/pinot/config/orders/: table.json  table_with_index.json
chapter07/streamlit/: requirements.txt
chapter08/: docker-compose-0-base.yml  docker-compose-1-pinot.yml  docker-compose-3-dashboard.yml  docker-compose-down.sh  docker-compose-up.sh
chapter08/orders-service/: multiseeder.py
chapter08/pinot/config/order_items_enriched/: table.json
chapter08/pizzashop/: pom.xml
chapter08/streamlit/: app.py
chapter09/: docker-compose-pull.sh
chapter09/debezium/: register_mysql.sh
chapter09/delivery-service/: app.py
chapter09/pinot/config/deliveryStatuses/: table.json
chapter09/pinot/config/orders_enriched/: table.json
chapter09/pizzashop/src/main/docker/: Dockerfile.legacy-jar  Dockerfile.native-micro
chapter09/streamlit/: Dockerfile  app.py  config.toml
chapter10/: README.md  docker-compose-0-base.yml  docker-compose-1-pinot.yml  docker-compose-2-kafka-streams-rest-api.yml  docker-compose-build.sh
chapter10/pinot/config/deliveryStatuses/: table.json
chapter10/pinot/config/orders/: schema.json
chapter10/pizzashop/src/main/docker/: Dockerfile.native
chapter10/pizzashop/src/main/resources/: application.properties
chapter10/streamlit/: app.py
(+21 files in other folders)
